Fix icon align
Icons would squeeze in when counter went to single digits. Defined width
so it would always remain constant.

--- a/fleet.css
+++ b/fleet.css
@@ -247,4 +247,6 @@
     position: relative;
     top: 6px;
     margin-left: 3px;
+    width: 18px;
+    text-align: right;
 }
